--- a/Divisi&Layanan.html
+++ b/Divisi&Layanan.html
@@ -16,7 +16,7 @@
         <div class="navbar-container">
         <h1 class="logo-navbar">MBC Laboratory</h1>
         <ul class="nav-menu">
-            <li class="li-navbar"><a href="MBCwebsite.html#home" class="a-navbar">HOME</a></li>
+            <li class="li-navbar"><a href="index.html#home" class="a-navbar">HOME</a></li>
             <li class="li-navbar"><a href="Divisi&Layanan.html#divisilayanan" class="a-navbar">DIVISI & LAYANAN</a></li>
             <li class="li-navbar"><a href="ContactMBC.html#kontak" class="a-navbar">CONTACT</a></li>
         </ul>
